[What] 1.Refine app theme (白的) 2.Add app entry 3.Add classic bluetooth page 4.Refine LE scan progress. 5.Refine preference setting value for "build connection" 6.Extract BT setting to BTSettingActivity

--- a/CipherConnectPro/res/layout/actionbar_indeterminate_progress.xml
+++ b/CipherConnectPro/res/layout/actionbar_indeterminate_progress.xml
@@ -8,6 +8,6 @@
         android:id="@+id/progressBarScan"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_gravity="center"/>
-
+        android:layout_gravity="center"
+        android:indeterminateDrawable="@drawable/pgbar_color"/>
 </FrameLayout>
