--- a/CipherConnectPro/res/layout/build_conn_method_preference.xml
+++ b/CipherConnectPro/res/layout/build_conn_method_preference.xml
@@ -43,7 +43,7 @@
 		    android:textAppearance="?android:attr/textAppearanceMedium" />
 
 		<TextView
-		    android:id="@+id/textView2"
+		    android:id="@+id/tvwLastDevice"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/none_device"
