--- a/CipherConnectPro/res/layout/salve_mode_activity.xml
+++ b/CipherConnectPro/res/layout/salve_mode_activity.xml
@@ -4,9 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SalveModeActivity" >
-	<ListView android:id="@android:id/list"
+
+	<ListView
+	    android:id="@android:id/list"
 	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"/>
+	    android:layout_height="fill_parent"
+	    android:visibility="gone" />
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
@@ -31,7 +35,8 @@
 	            android:id="@+id/tvwReset"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_horizontal" />
+	            android:layout_gravity="center_horizontal"
+	            android:text="@string/strResetConn" />
 
         </LinearLayout>
 
@@ -51,7 +56,8 @@
 	             android:id="@+id/tvwSetConn"
 	             android:layout_width="wrap_content"
 	             android:layout_height="wrap_content"
-	             android:layout_gravity="center_horizontal"/>
+	             android:layout_gravity="center_horizontal"
+	             android:text="@string/strSetConn" />
 
          </LinearLayout>
 
