[What] Implement auto connect [classic]

--- a/CipherConnectPro/res/layout/build_conn_method_preference.xml
+++ b/CipherConnectPro/res/layout/build_conn_method_preference.xml
@@ -35,6 +35,12 @@
 		    android:layout_height="wrap_content"
 		    android:text="@string/str_search" />
 
+		<CheckBox
+		    android:id="@+id/ckAutoReConn"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="@string/setting_autoconnect" />
+
 		<TextView
 		    android:id="@+id/tvTitle"
 		    android:layout_width="wrap_content"
