[What] Refine UI/wording

--- a/CipherConnectPro/res/layout/build_conn_method_preference.xml
+++ b/CipherConnectPro/res/layout/build_conn_method_preference.xml
@@ -33,7 +33,7 @@
 		    android:id="@+id/btnSearchDevice"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:text="@string/str_search" />
+		    android:text="@string/str_discover" />
 
 		<CheckBox
 		    android:id="@+id/ckAutoReConn"
