--- a/CipherConnectPro/res/layout/salve_mode_activity.xml
+++ b/CipherConnectPro/res/layout/salve_mode_activity.xml
@@ -22,7 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:orientation="vertical" >
 
 			<ImageView
@@ -43,7 +43,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:orientation="vertical" >
 
 	         <ImageView
@@ -64,7 +64,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:orientation="vertical" >
 
             <ImageView
@@ -82,16 +82,16 @@
         </LinearLayout>
         
          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="0dp"
-              android:layout_weight="1"
-              android:orientation="vertical" >
+             android:layout_width="match_parent"
+             android:layout_height="0dp"
+             android:layout_weight="2"
+             android:orientation="vertical" >
 
 	        <ImageView
 	            android:id="@+id/imageQRCodeConn"
 	            android:layout_width="@dimen/QRcodeWidth"
 	            android:layout_height="@dimen/QRcodeHeight"
-	            android:layout_gravity="center_horizontal" />
+	            android:layout_gravity="top|center_horizontal" />
 	
 	        <TextView
 	            android:id="@+id/tvwQRConn"
@@ -107,14 +107,13 @@
               android:layout_weight="1"
               android:orientation="vertical" >
 
-	        <ImageView
-	            android:id="@+id/imageBTConn"
-	            android:layout_width="@dimen/BTICWidth"
-	            android:layout_height="@dimen/BTICHeight"
-	            
-	            android:layout_centerHorizontal="true"
-	            android:layout_gravity="center_horizontal" />
-
+            <ImageView
+                android:id="@+id/imageBTConn"
+                android:layout_width="@dimen/BTICWidth"
+                android:layout_height="@dimen/BTICHeight"
+                android:layout_above="@+id/tvwDeviceName"
+                android:layout_centerHorizontal="true" />
+            
 	        <TextView
 	        android:id="@+id/tvwDeviceName"
 	        android:layout_width="wrap_content"
