--- a/CipherConnectPro2/res/layout/build_conn_method_preference.xml
+++ b/CipherConnectPro2/res/layout/build_conn_method_preference.xml
@@ -16,13 +16,18 @@
 	        android:gravity="start|center_vertical"
 	        android:text="@string/setting_buildconnect" />
 	
-	    <ToggleButton
+	    <ImageButton
 	        android:id="@+id/btnConnMethod"
 	        android:layout_width="70dp"
 	        android:layout_height="70dp"
-	        android:background="@drawable/conn_method"
-	        android:textOff=""
-	        android:textOn="" />
+	        android:adjustViewBounds="true"
+	        android:paddingBottom="1dp"
+	        android:paddingLeft="1dp"
+	        android:paddingRight="1dp"
+	        android:paddingTop="1dp"
+	        android:scaleType="fitCenter"
+	        android:src="@drawable/slave_conn" />
+
 	</LinearLayout>
 
 	<LinearLayout
