--- a/CipherConnectPro2/res/layout/salve_mode_qr_activity.xml
+++ b/CipherConnectPro2/res/layout/salve_mode_qr_activity.xml
@@ -35,51 +35,29 @@
 	            android:id="@+id/tvwReset"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_horizontal"
-	            android:text="@string/strResetConn" />
+	            android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
+        
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="0dp"
+             android:layout_weight="2"
+             android:orientation="vertical" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
-            android:orientation="vertical" >
-
-	         <ImageView
-	             android:id="@+id/imageSetConn"
-	             android:layout_width="@dimen/BarcodeWidth"
-	             android:layout_height="@dimen/BarcodeHeight"
-	             android:layout_gravity="center_horizontal" />
+	        <ImageView
+	            android:id="@+id/imageQRCodeConn"
+	            android:layout_width="@dimen/QRcodeWidth"
+	            android:layout_height="@dimen/QRcodeHeight"
+	            android:layout_gravity="top|center_horizontal" />
 	
-	         <TextView
-	             android:id="@+id/tvwSetConn"
-	             android:layout_width="wrap_content"
-	             android:layout_height="wrap_content"
-	             android:layout_gravity="center_horizontal"
-	             android:text="@string/strSetConn" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/imageMACAdd"
-                android:layout_width="@dimen/BarcodeWidth"
-                android:layout_height="@dimen/BarcodeHeight"
-                android:layout_gravity="center_horizontal"/>
-
-            <TextView
-                android:id="@+id/tvwAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/strMacAdd" />
-        </LinearLayout>
+	        <TextView
+	            android:id="@+id/tvwQRConn"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_horizontal"
+	            android:text="@string/strOneScanTile" />
+		</LinearLayout>
          
         <RelativeLayout
               android:layout_width="match_parent"
@@ -102,6 +80,8 @@
 	        android:layout_centerHorizontal="true"
 	        android:text="@string/strBTNoDeviceName" />
 		</RelativeLayout>
+		
+	
 		    
     </LinearLayout>
 </RelativeLayout>
