--- a/CipherConnectPro2/res/xml/method.xml
+++ b/CipherConnectPro2/res/xml/method.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <input-method xmlns:android="http://schemas.android.com/apk/res/android" 
-	android:settingsActivity="com.cipherlab.cipherconnectpro.CipherConnectSettingActivity" 
+	android:settingsActivity="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity" 
 	android:isDefault="true"
 	android:name="CipherConnect"
 	/>
