--- a/CipherConnectPro2/res/xml/qwerty_none.xml
+++ b/CipherConnectPro2/res/xml/qwerty_none.xml
@@ -26,6 +26,13 @@
     >
     
     <Row>
+        <Key android:codes="@integer/keycodeSetting" 
+             android:keyIcon="@drawable/sym_keyboard_setting"
+             android:keyWidth="20%p" 
+             android:keyEdgeFlags="left"/>
+    </Row>
+    
+    <Row>
         <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
         <Key android:codes="119" android:keyLabel="w"/>
         <Key android:codes="101" android:keyLabel="e"/>
