--- a/CipherConnectPro2/res/xml/symbols_shift.xml
+++ b/CipherConnectPro2/res/xml/symbols_shift.xml
@@ -25,6 +25,12 @@
     android:keyHeight="@dimen/key_height"
     >
     <Row>
+        <Key android:codes="@integer/keycodeSetting" 
+             android:keyIcon="@drawable/sym_keyboard_setting"
+             android:keyWidth="20%p" 
+             android:keyEdgeFlags="left"/>
+    </Row>
+    <Row>
         <Key android:codes="126" android:keyLabel="~" android:keyEdgeFlags="left"/>
         <Key android:codes="177" android:keyLabel="±"/>
         <Key android:codes="215" android:keyLabel="×"/>
