--- a/CipherConnectPro2/res/xml/qwerty_ru.xml
+++ b/CipherConnectPro2/res/xml/qwerty_ru.xml
@@ -29,6 +29,9 @@
              android:keyIcon="@drawable/sym_keyboard_setting"
              android:keyWidth="20%p" 
              android:keyEdgeFlags="left"/>
+         <Key android:codes="@integer/keycodePreIM"  
+         	 android:keyIcon="@drawable/sym_keyboard_preim"
+         	 android:keyWidth="20%p"/> 
     </Row>
 	<Row>
         <Key android:codes="1081" android:keyLabel="Й" android:keyEdgeFlags="left"/>
