--- a/CipherConnectPro2/res/xml/qwerty_fr.xml
+++ b/CipherConnectPro2/res/xml/qwerty_fr.xml
@@ -29,6 +29,9 @@
              android:keyIcon="@drawable/sym_keyboard_setting"
              android:keyWidth="20%p" 
              android:keyEdgeFlags="left"/>
+        <Key android:codes="@integer/keycodePreIM"  
+             android:keyIcon="@drawable/sym_keyboard_preim"
+             android:keyWidth="20%p"/>
     </Row>
 	<Row>
         <Key android:codes="224" android:keyLabel="à" android:keyEdgeFlags="left"/>
