--- a/CipherConnectPro2/res/xml/qwerty_it.xml
+++ b/CipherConnectPro2/res/xml/qwerty_it.xml
@@ -34,7 +34,12 @@
         <Key android:codes="249" android:keyLabel="ù"/>
         <Key android:codes="232" android:keyLabel="è"/>
         <Key android:codes="242" android:keyLabel="ò"/>
-        <Key android:codes="224" android:keyLabel="à" android:keyEdgeFlags="right"/>        
+        <Key android:codes="224" android:keyLabel="à"/> 
+        <Key android:codes="@integer/keycodePreIM"  
+        	 android:keyIcon="@drawable/sym_keyboard_preim"
+        	 android:keyWidth="20%p" 
+        	 android:horizontalGap="5%p"
+         	 android:keyEdgeFlags="right"/>        
     </Row>
     
     <Row>
