--- a/CipherConnectPro2/res/xml/symbols_none.xml
+++ b/CipherConnectPro2/res/xml/symbols_none.xml
@@ -29,6 +29,9 @@
              android:keyIcon="@drawable/sym_keyboard_setting"
              android:keyWidth="20%p" 
              android:keyEdgeFlags="left"/>
+        <Key android:codes="@integer/keycodePreIM"  
+             android:keyIcon="@drawable/sym_keyboard_preim"
+             android:keyWidth="20%p"/>
     </Row>
     <Row>
         <Key android:codes="49" android:keyLabel="1" android:keyEdgeFlags="left"/>
