[What]Implement getting scanner firmware version.

--- a/CipherConnectPro2/res/layout/cipherconnect_setting_activity.xml
+++ b/CipherConnectPro2/res/layout/cipherconnect_setting_activity.xml
@@ -46,6 +46,7 @@
         	</intent>
         </Preference>
         <Preference
+            android:key="about"
             android:title="@string/setting_about" >
             <intent 
             	android:targetPackage="com.cipherlab.cipherconnectpro2"
