--- a/CipherConnectPro2/res/layout/input.xml
+++ b/CipherConnectPro2/res/layout/input.xml
@@ -24,4 +24,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:keyPreviewHeight="95dp"
+        android:keyPreviewLayout="@null"
+        android:keyTextColor="#ffffffff"
         />
