2016/05/16 ===========APP info=========== Version number : 1.0.11 SDK version: Android 4.4
Updated:
1.Changed string "Display stays awake while connecting with the BT scanner" to "Display stays awake".
2.Added Summary "Display stays awake while connecting with the BT scanner".

--- a/CipherConnectPro2/res/layout/cipherconnect_setting_activity.xml
+++ b/CipherConnectPro2/res/layout/cipherconnect_setting_activity.xml
@@ -10,7 +10,8 @@
 
     	<CheckBoxPreference
 	    	android:key="ckbSuspend_Enable"
-	        android:title="@string/Backlight_Suspend_Title" />
+	        android:title="@string/Backlight_Suspend_Title" 
+	        android:summary="@string/Backlight_Suspend_Summary"/>
     
     	<CheckBoxPreference
             android:defaultValue="false"
