--- a/CipherConnectPro2/res/layout/custom_notification.xml
+++ b/CipherConnectPro2/res/layout/custom_notification.xml
@@ -12,7 +12,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
 	    android:layout_weight="15"
-	    android:src="@drawable/noconnect" />
+	    android:src="@drawable/notification_noconnect" />
 	
 	<LinearLayout
 	    android:layout_width="0dp"
