Changed SHIFT icon to 1/2 and 2/2 on Symbols keyboard.

--- a/CipherConnectPro2/res/xml/symbols_shift_none.xml
+++ b/CipherConnectPro2/res/xml/symbols_shift_none.xml
@@ -60,12 +60,8 @@
     </Row>
     
     <Row>
-        <Key android:codes="-1" 
-             android:keyIcon="@drawable/sym_keyboard_shift"
-             android:iconPreview="@drawable/prv_keyboard_shift"
+        <Key android:codes="-1" android:keyLabel="2/2" 
              android:keyWidth="15%p" 
-             android:isModifier="true"
-             android:isSticky="true" 
              android:keyEdgeFlags="left"/>
         
         <Key android:codes="161" android:keyLabel="¡" />
