--- a/CipherConnectPro2/res/xml/symbols_none.xml
+++ b/CipherConnectPro2/res/xml/symbols_none.xml
@@ -60,12 +60,8 @@
     </Row>
     
     <Row>
-        <Key android:codes="-1" 
-             android:keyIcon="@drawable/sym_keyboard_shift"
-             android:iconPreview="@drawable/prv_keyboard_shift"
+        <Key android:codes="-1" android:keyLabel="1/2"
              android:keyWidth="15%p" 
-             android:isModifier="true"
-             android:isSticky="true" 
              android:keyEdgeFlags="left"/>
         
         <Key android:codes="33" android:keyLabel="!" />
